--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
 /* Start coding here */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(0.1turn, hsl(0, 100%, 70%), hsl(240, 100%, 70%));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-1{
+    width: 35vw;
+    background-color: hsla(0, 50%, 100%, 0.5);
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 10px;
+}
+.box-1>p{
+    padding-top: 20px;
+}
